[tool.poetry]
name = "sortingvisualization"
version = "0.1.0"
description = "A simple visualization of different sorting algorithms"
authors = ["Nico Riedl"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pyqt6 = "6.2.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"